o/issa.output
Грамматика

    0 $accept: calculation $end

    1 calculation: %empty
    2            | calculation line

    3 line: T_NEWLINE
    4     | mixed_expression T_NEWLINE
    5     | expression T_NEWLINE
    6     | T_QUIT T_NEWLINE

    7 mixed_expression: T_FLOAT
    8                 | mixed_expression T_PLUS mixed_expression
    9                 | mixed_expression T_MINUS mixed_expression
   10                 | mixed_expression T_MULTIPLY mixed_expression
   11                 | mixed_expression T_DIVIDE mixed_expression
   12                 | T_LEFT mixed_expression T_RIGHT
   13                 | expression T_PLUS mixed_expression
   14                 | expression T_MINUS mixed_expression
   15                 | expression T_MULTIPLY mixed_expression
   16                 | expression T_DIVIDE mixed_expression
   17                 | mixed_expression T_PLUS expression
   18                 | mixed_expression T_MINUS expression
   19                 | mixed_expression T_MULTIPLY expression
   20                 | mixed_expression T_DIVIDE expression
   21                 | expression T_DIVIDE expression

   22 expression: T_INT
   23           | expression T_PLUS expression
   24           | expression T_MINUS expression
   25           | expression T_MULTIPLY expression
   26           | T_LEFT expression T_RIGHT


Терминальные символы с правилами, в которых они появляются

    $end (0) 0
    error (256)
    T_INT <ival> (258) 22
    T_FLOAT <fval> (259) 7
    T_PLUS (260) 8 13 17 23
    T_MINUS (261) 9 14 18 24
    T_MULTIPLY (262) 10 15 19 25
    T_DIVIDE (263) 11 16 20 21
    T_LEFT (264) 12 26
    T_RIGHT (265) 12 26
    T_NEWLINE (266) 3 4 5 6
    T_QUIT (267) 6


Нетерминальные символы с правилами, в которых они появляются

    $accept (13)
        on left: 0
    calculation (14)
        on left: 1 2
        on right: 0 2
    line (15)
        on left: 3 4 5 6
        on right: 2
    mixed_expression <fval> (16)
        on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
        on right: 4 8 9 10 11 12 13 14 15 16 17 18 19 20
    expression <ival> (17)
        on left: 22 23 24 25 26
        on right: 5 13 14 15 16 17 18 19 20 21 23 24 25 26


State 0

    0 $accept: . calculation $end

    $default  вывод с использованием правила 1 (calculation)

    calculation  переход в состояние 1


State 1

    0 $accept: calculation . $end
    2 calculation: calculation . line

    $end       сдвиг, и переход в состояние 2
    T_INT      сдвиг, и переход в состояние 3
    T_FLOAT    сдвиг, и переход в состояние 4
    T_LEFT     сдвиг, и переход в состояние 5
    T_NEWLINE  сдвиг, и переход в состояние 6
    T_QUIT     сдвиг, и переход в состояние 7

    line              переход в состояние 8
    mixed_expression  переход в состояние 9
    expression        переход в состояние 10


State 2

    0 $accept: calculation $end .

    $default  принять


State 3

   22 expression: T_INT .

    $default  вывод с использованием правила 22 (expression)


State 4

    7 mixed_expression: T_FLOAT .

    $default  вывод с использованием правила 7 (mixed_expression)


State 5

   12 mixed_expression: T_LEFT . mixed_expression T_RIGHT
   26 expression: T_LEFT . expression T_RIGHT

    T_INT    сдвиг, и переход в состояние 3
    T_FLOAT  сдвиг, и переход в состояние 4
    T_LEFT   сдвиг, и переход в состояние 5

    mixed_expression  переход в состояние 11
    expression        переход в состояние 12


State 6

    3 line: T_NEWLINE .

    $default  вывод с использованием правила 3 (line)


State 7

    6 line: T_QUIT . T_NEWLINE

    T_NEWLINE  сдвиг, и переход в состояние 13


State 8

    2 calculation: calculation line .

    $default  вывод с использованием правила 2 (calculation)


State 9

    4 line: mixed_expression . T_NEWLINE
    8 mixed_expression: mixed_expression . T_PLUS mixed_expression
    9                 | mixed_expression . T_MINUS mixed_expression
   10                 | mixed_expression . T_MULTIPLY mixed_expression
   11                 | mixed_expression . T_DIVIDE mixed_expression
   17                 | mixed_expression . T_PLUS expression
   18                 | mixed_expression . T_MINUS expression
   19                 | mixed_expression . T_MULTIPLY expression
   20                 | mixed_expression . T_DIVIDE expression

    T_PLUS      сдвиг, и переход в состояние 14
    T_MINUS     сдвиг, и переход в состояние 15
    T_MULTIPLY  сдвиг, и переход в состояние 16
    T_DIVIDE    сдвиг, и переход в состояние 17
    T_NEWLINE   сдвиг, и переход в состояние 18


State 10

    5 line: expression . T_NEWLINE
   13 mixed_expression: expression . T_PLUS mixed_expression
   14                 | expression . T_MINUS mixed_expression
   15                 | expression . T_MULTIPLY mixed_expression
   16                 | expression . T_DIVIDE mixed_expression
   21                 | expression . T_DIVIDE expression
   23 expression: expression . T_PLUS expression
   24           | expression . T_MINUS expression
   25           | expression . T_MULTIPLY expression

    T_PLUS      сдвиг, и переход в состояние 19
    T_MINUS     сдвиг, и переход в состояние 20
    T_MULTIPLY  сдвиг, и переход в состояние 21
    T_DIVIDE    сдвиг, и переход в состояние 22
    T_NEWLINE   сдвиг, и переход в состояние 23


State 11

    8 mixed_expression: mixed_expression . T_PLUS mixed_expression
    9                 | mixed_expression . T_MINUS mixed_expression
   10                 | mixed_expression . T_MULTIPLY mixed_expression
   11                 | mixed_expression . T_DIVIDE mixed_expression
   12                 | T_LEFT mixed_expression . T_RIGHT
   17                 | mixed_expression . T_PLUS expression
   18                 | mixed_expression . T_MINUS expression
   19                 | mixed_expression . T_MULTIPLY expression
   20                 | mixed_expression . T_DIVIDE expression

    T_PLUS      сдвиг, и переход в состояние 14
    T_MINUS     сдвиг, и переход в состояние 15
    T_MULTIPLY  сдвиг, и переход в состояние 16
    T_DIVIDE    сдвиг, и переход в состояние 17
    T_RIGHT     сдвиг, и переход в состояние 24


State 12

   13 mixed_expression: expression . T_PLUS mixed_expression
   14                 | expression . T_MINUS mixed_expression
   15                 | expression . T_MULTIPLY mixed_expression
   16                 | expression . T_DIVIDE mixed_expression
   21                 | expression . T_DIVIDE expression
   23 expression: expression . T_PLUS expression
   24           | expression . T_MINUS expression
   25           | expression . T_MULTIPLY expression
   26           | T_LEFT expression . T_RIGHT

    T_PLUS      сдвиг, и переход в состояние 19
    T_MINUS     сдвиг, и переход в состояние 20
    T_MULTIPLY  сдвиг, и переход в состояние 21
    T_DIVIDE    сдвиг, и переход в состояние 22
    T_RIGHT     сдвиг, и переход в состояние 25


State 13

    6 line: T_QUIT T_NEWLINE .

    $default  вывод с использованием правила 6 (line)


State 14

    8 mixed_expression: mixed_expression T_PLUS . mixed_expression
   17                 | mixed_expression T_PLUS . expression

    T_INT    сдвиг, и переход в состояние 3
    T_FLOAT  сдвиг, и переход в состояние 4
    T_LEFT   сдвиг, и переход в состояние 5

    mixed_expression  переход в состояние 26
    expression        переход в состояние 27


State 15

    9 mixed_expression: mixed_expression T_MINUS . mixed_expression
   18                 | mixed_expression T_MINUS . expression

    T_INT    сдвиг, и переход в состояние 3
    T_FLOAT  сдвиг, и переход в состояние 4
    T_LEFT   сдвиг, и переход в состояние 5

    mixed_expression  переход в состояние 28
    expression        переход в состояние 29


State 16

   10 mixed_expression: mixed_expression T_MULTIPLY . mixed_expression
   19                 | mixed_expression T_MULTIPLY . expression

    T_INT    сдвиг, и переход в состояние 3
    T_FLOAT  сдвиг, и переход в состояние 4
    T_LEFT   сдвиг, и переход в состояние 5

    mixed_expression  переход в состояние 30
    expression        переход в состояние 31


State 17

   11 mixed_expression: mixed_expression T_DIVIDE . mixed_expression
   20                 | mixed_expression T_DIVIDE . expression

    T_INT    сдвиг, и переход в состояние 3
    T_FLOAT  сдвиг, и переход в состояние 4
    T_LEFT   сдвиг, и переход в состояние 5

    mixed_expression  переход в состояние 32
    expression        переход в состояние 33


State 18

    4 line: mixed_expression T_NEWLINE .

    $default  вывод с использованием правила 4 (line)


State 19

   13 mixed_expression: expression T_PLUS . mixed_expression
   23 expression: expression T_PLUS . expression

    T_INT    сдвиг, и переход в состояние 3
    T_FLOAT  сдвиг, и переход в состояние 4
    T_LEFT   сдвиг, и переход в состояние 5

    mixed_expression  переход в состояние 34
    expression        переход в состояние 35


State 20

   14 mixed_expression: expression T_MINUS . mixed_expression
   24 expression: expression T_MINUS . expression

    T_INT    сдвиг, и переход в состояние 3
    T_FLOAT  сдвиг, и переход в состояние 4
    T_LEFT   сдвиг, и переход в состояние 5

    mixed_expression  переход в состояние 36
    expression        переход в состояние 37


State 21

   15 mixed_expression: expression T_MULTIPLY . mixed_expression
   25 expression: expression T_MULTIPLY . expression

    T_INT    сдвиг, и переход в состояние 3
    T_FLOAT  сдвиг, и переход в состояние 4
    T_LEFT   сдвиг, и переход в состояние 5

    mixed_expression  переход в состояние 38
    expression        переход в состояние 39


State 22

   16 mixed_expression: expression T_DIVIDE . mixed_expression
   21                 | expression T_DIVIDE . expression

    T_INT    сдвиг, и переход в состояние 3
    T_FLOAT  сдвиг, и переход в состояние 4
    T_LEFT   сдвиг, и переход в состояние 5

    mixed_expression  переход в состояние 40
    expression        переход в состояние 41


State 23

    5 line: expression T_NEWLINE .

    $default  вывод с использованием правила 5 (line)


State 24

   12 mixed_expression: T_LEFT mixed_expression T_RIGHT .

    $default  вывод с использованием правила 12 (mixed_expression)


State 25

   26 expression: T_LEFT expression T_RIGHT .

    $default  вывод с использованием правила 26 (expression)


State 26

    8 mixed_expression: mixed_expression . T_PLUS mixed_expression
    8                 | mixed_expression T_PLUS mixed_expression .
    9                 | mixed_expression . T_MINUS mixed_expression
   10                 | mixed_expression . T_MULTIPLY mixed_expression
   11                 | mixed_expression . T_DIVIDE mixed_expression
   17                 | mixed_expression . T_PLUS expression
   18                 | mixed_expression . T_MINUS expression
   19                 | mixed_expression . T_MULTIPLY expression
   20                 | mixed_expression . T_DIVIDE expression

    T_MULTIPLY  сдвиг, и переход в состояние 16
    T_DIVIDE    сдвиг, и переход в состояние 17

    $default  вывод с использованием правила 8 (mixed_expression)


State 27

   13 mixed_expression: expression . T_PLUS mixed_expression
   14                 | expression . T_MINUS mixed_expression
   15                 | expression . T_MULTIPLY mixed_expression
   16                 | expression . T_DIVIDE mixed_expression
   17                 | mixed_expression T_PLUS expression .
   21                 | expression . T_DIVIDE expression
   23 expression: expression . T_PLUS expression
   24           | expression . T_MINUS expression
   25           | expression . T_MULTIPLY expression

    T_MULTIPLY  сдвиг, и переход в состояние 21
    T_DIVIDE    сдвиг, и переход в состояние 22

    $default  вывод с использованием правила 17 (mixed_expression)


State 28

    8 mixed_expression: mixed_expression . T_PLUS mixed_expression
    9                 | mixed_expression . T_MINUS mixed_expression
    9                 | mixed_expression T_MINUS mixed_expression .
   10                 | mixed_expression . T_MULTIPLY mixed_expression
   11                 | mixed_expression . T_DIVIDE mixed_expression
   17                 | mixed_expression . T_PLUS expression
   18                 | mixed_expression . T_MINUS expression
   19                 | mixed_expression . T_MULTIPLY expression
   20                 | mixed_expression . T_DIVIDE expression

    T_MULTIPLY  сдвиг, и переход в состояние 16
    T_DIVIDE    сдвиг, и переход в состояние 17

    $default  вывод с использованием правила 9 (mixed_expression)


State 29

   13 mixed_expression: expression . T_PLUS mixed_expression
   14                 | expression . T_MINUS mixed_expression
   15                 | expression . T_MULTIPLY mixed_expression
   16                 | expression . T_DIVIDE mixed_expression
   18                 | mixed_expression T_MINUS expression .
   21                 | expression . T_DIVIDE expression
   23 expression: expression . T_PLUS expression
   24           | expression . T_MINUS expression
   25           | expression . T_MULTIPLY expression

    T_MULTIPLY  сдвиг, и переход в состояние 21
    T_DIVIDE    сдвиг, и переход в состояние 22

    $default  вывод с использованием правила 18 (mixed_expression)


State 30

    8 mixed_expression: mixed_expression . T_PLUS mixed_expression
    9                 | mixed_expression . T_MINUS mixed_expression
   10                 | mixed_expression . T_MULTIPLY mixed_expression
   10                 | mixed_expression T_MULTIPLY mixed_expression .
   11                 | mixed_expression . T_DIVIDE mixed_expression
   17                 | mixed_expression . T_PLUS expression
   18                 | mixed_expression . T_MINUS expression
   19                 | mixed_expression . T_MULTIPLY expression
   20                 | mixed_expression . T_DIVIDE expression

    $default  вывод с использованием правила 10 (mixed_expression)


State 31

   13 mixed_expression: expression . T_PLUS mixed_expression
   14                 | expression . T_MINUS mixed_expression
   15                 | expression . T_MULTIPLY mixed_expression
   16                 | expression . T_DIVIDE mixed_expression
   19                 | mixed_expression T_MULTIPLY expression .
   21                 | expression . T_DIVIDE expression
   23 expression: expression . T_PLUS expression
   24           | expression . T_MINUS expression
   25           | expression . T_MULTIPLY expression

    $default  вывод с использованием правила 19 (mixed_expression)


State 32

    8 mixed_expression: mixed_expression . T_PLUS mixed_expression
    9                 | mixed_expression . T_MINUS mixed_expression
   10                 | mixed_expression . T_MULTIPLY mixed_expression
   11                 | mixed_expression . T_DIVIDE mixed_expression
   11                 | mixed_expression T_DIVIDE mixed_expression .
   17                 | mixed_expression . T_PLUS expression
   18                 | mixed_expression . T_MINUS expression
   19                 | mixed_expression . T_MULTIPLY expression
   20                 | mixed_expression . T_DIVIDE expression

    $default  вывод с использованием правила 11 (mixed_expression)


State 33

   13 mixed_expression: expression . T_PLUS mixed_expression
   14                 | expression . T_MINUS mixed_expression
   15                 | expression . T_MULTIPLY mixed_expression
   16                 | expression . T_DIVIDE mixed_expression
   20                 | mixed_expression T_DIVIDE expression .
   21                 | expression . T_DIVIDE expression
   23 expression: expression . T_PLUS expression
   24           | expression . T_MINUS expression
   25           | expression . T_MULTIPLY expression

    $default  вывод с использованием правила 20 (mixed_expression)


State 34

    8 mixed_expression: mixed_expression . T_PLUS mixed_expression
    9                 | mixed_expression . T_MINUS mixed_expression
   10                 | mixed_expression . T_MULTIPLY mixed_expression
   11                 | mixed_expression . T_DIVIDE mixed_expression
   13                 | expression T_PLUS mixed_expression .
   17                 | mixed_expression . T_PLUS expression
   18                 | mixed_expression . T_MINUS expression
   19                 | mixed_expression . T_MULTIPLY expression
   20                 | mixed_expression . T_DIVIDE expression

    T_MULTIPLY  сдвиг, и переход в состояние 16
    T_DIVIDE    сдвиг, и переход в состояние 17

    $default  вывод с использованием правила 13 (mixed_expression)


State 35

   13 mixed_expression: expression . T_PLUS mixed_expression
   14                 | expression . T_MINUS mixed_expression
   15                 | expression . T_MULTIPLY mixed_expression
   16                 | expression . T_DIVIDE mixed_expression
   21                 | expression . T_DIVIDE expression
   23 expression: expression . T_PLUS expression
   23           | expression T_PLUS expression .
   24           | expression . T_MINUS expression
   25           | expression . T_MULTIPLY expression

    T_MULTIPLY  сдвиг, и переход в состояние 21
    T_DIVIDE    сдвиг, и переход в состояние 22

    $default  вывод с использованием правила 23 (expression)


State 36

    8 mixed_expression: mixed_expression . T_PLUS mixed_expression
    9                 | mixed_expression . T_MINUS mixed_expression
   10                 | mixed_expression . T_MULTIPLY mixed_expression
   11                 | mixed_expression . T_DIVIDE mixed_expression
   14                 | expression T_MINUS mixed_expression .
   17                 | mixed_expression . T_PLUS expression
   18                 | mixed_expression . T_MINUS expression
   19                 | mixed_expression . T_MULTIPLY expression
   20                 | mixed_expression . T_DIVIDE expression

    T_MULTIPLY  сдвиг, и переход в состояние 16
    T_DIVIDE    сдвиг, и переход в состояние 17

    $default  вывод с использованием правила 14 (mixed_expression)


State 37

   13 mixed_expression: expression . T_PLUS mixed_expression
   14                 | expression . T_MINUS mixed_expression
   15                 | expression . T_MULTIPLY mixed_expression
   16                 | expression . T_DIVIDE mixed_expression
   21                 | expression . T_DIVIDE expression
   23 expression: expression . T_PLUS expression
   24           | expression . T_MINUS expression
   24           | expression T_MINUS expression .
   25           | expression . T_MULTIPLY expression

    T_MULTIPLY  сдвиг, и переход в состояние 21
    T_DIVIDE    сдвиг, и переход в состояние 22

    $default  вывод с использованием правила 24 (expression)


State 38

    8 mixed_expression: mixed_expression . T_PLUS mixed_expression
    9                 | mixed_expression . T_MINUS mixed_expression
   10                 | mixed_expression . T_MULTIPLY mixed_expression
   11                 | mixed_expression . T_DIVIDE mixed_expression
   15                 | expression T_MULTIPLY mixed_expression .
   17                 | mixed_expression . T_PLUS expression
   18                 | mixed_expression . T_MINUS expression
   19                 | mixed_expression . T_MULTIPLY expression
   20                 | mixed_expression . T_DIVIDE expression

    $default  вывод с использованием правила 15 (mixed_expression)


State 39

   13 mixed_expression: expression . T_PLUS mixed_expression
   14                 | expression . T_MINUS mixed_expression
   15                 | expression . T_MULTIPLY mixed_expression
   16                 | expression . T_DIVIDE mixed_expression
   21                 | expression . T_DIVIDE expression
   23 expression: expression . T_PLUS expression
   24           | expression . T_MINUS expression
   25           | expression . T_MULTIPLY expression
   25           | expression T_MULTIPLY expression .

    $default  вывод с использованием правила 25 (expression)


State 40

    8 mixed_expression: mixed_expression . T_PLUS mixed_expression
    9                 | mixed_expression . T_MINUS mixed_expression
   10                 | mixed_expression . T_MULTIPLY mixed_expression
   11                 | mixed_expression . T_DIVIDE mixed_expression
   16                 | expression T_DIVIDE mixed_expression .
   17                 | mixed_expression . T_PLUS expression
   18                 | mixed_expression . T_MINUS expression
   19                 | mixed_expression . T_MULTIPLY expression
   20                 | mixed_expression . T_DIVIDE expression

    $default  вывод с использованием правила 16 (mixed_expression)


State 41

   13 mixed_expression: expression . T_PLUS mixed_expression
   14                 | expression . T_MINUS mixed_expression
   15                 | expression . T_MULTIPLY mixed_expression
   16                 | expression . T_DIVIDE mixed_expression
   21                 | expression . T_DIVIDE expression
   21                 | expression T_DIVIDE expression .
   23 expression: expression . T_PLUS expression
   24           | expression . T_MINUS expression
   25           | expression . T_MULTIPLY expression

    $default  вывод с использованием правила 21 (mixed_expression)
